--- a/MovieWebAssembly_Api/appsettings.json
+++ b/MovieWebAssembly_Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-H9FBDS7;Database=BlazorAppDatabase;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  }
 }
