--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="System.Linq" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
