--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -30,6 +30,10 @@
       <Resource Include="SQL\CreateDBandIdentity.sql">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Resource>
+      <None Remove="SQL\InitializeDbScript.sql" />
+      <Resource Include="SQL\InitializeDbScript.sql">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Resource>
     </ItemGroup>
 
 </Project>
