jwt token creation on sign in

--- a/MovieWebAssembly_Api/appsettings.json
+++ b/MovieWebAssembly_Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-H9FBDS7;Database=MovieWebAssemblyAppDatabase;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "SecretKey": "secretKey",
+    "ValidAudience": "https://localhost:7282" ,
+    "ValidIssuer":"https://localhost:7282"
   }
 }
