--- a/MovieWebAssembly_Api/Properties/launchSettings.json
+++ b/MovieWebAssembly_Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7282;http://localhost:5209",
+      "applicationUrl": "http://localhost:7282;http://localhost:5209",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
