--- a/MovieWebAssembly_Api/MovieWebAssembly_Api.csproj
+++ b/MovieWebAssembly_Api/MovieWebAssembly_Api.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Helper\" />
       <Folder Include="Requests\Resources\" />
     </ItemGroup>
 
